name:                servant-examples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yanhan/servant-examples#readme
license:             MIT
author:              Pang Yan Han
maintainer:          pangyanhan@gmail.com
copyright:           2018 Pang Yan Han
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable servant-examples
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , mtl
                     , servant
                     , servant-server
                     , servant-examples
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite servant-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-examples
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yanhan/servant-examples
